name:                adventofcode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tejasbubane/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Tejas Bubane
maintainer:          tejasbubane@gmail.com
copyright:           2018-2019 Tejas Bubane
category:            puzzle-solving
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , trifecta
                     , parsers
                     , dates
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4

test-suite tests
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec, src
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , trifecta
                     , parsers
                     , dates
  other-modules:       Day1
                     , Day1Spec
                     , Day2
                     , Day2Spec
                     , Day3
                     , Day3Spec
                     , Day4
                     , Day4Spec
